RESOLVED FIXED268011
[iOS] Occasional crash under -_updatePanGestureToPreventScrolling when resetting state after process termination
https://bugs.webkit.org/show_bug.cgi?id=268011
Summary [iOS] Occasional crash under -_updatePanGestureToPreventScrolling when resett...
Wenson Hsieh
Reported 2024-01-24 10:11:23 PST
Attachments
Wenson Hsieh
Comment 1 2024-01-24 10:23:13 PST
EWS
Comment 2 2024-01-24 13:29:52 PST
Committed 273443@main (fe72eacc753b): <https://commits.webkit.org/273443@main> Reviewed commits have been landed. Closing PR #23175 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.